[package]
name = "piraterealm"
version = "0.1.0"
authors = ["Galaxtone", "Exopteron"]
edition = "2018"

[dependencies]
# TODO Limit features in the future
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
flate2 = "1.0"
serde = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
